--- a/src/App.css
+++ b/src/App.css
@@ -61,7 +61,7 @@ main {
 
 footer {
   position: absolute;
-  bottom: 0;
+  bottom: -58px;
   width: 100vw;
   /* border-top: 1px solid rgb(255, 255, 255); */
   /* width: 90%; */
@@ -122,7 +122,7 @@ footer {
   position: relative;
   width: 70%;
   height: 75%;
-  background-color: #F7F9Fb;
+  background-color: rgb(2, 138, 192);;
   margin-left: auto;
   margin-right: auto;
 }
@@ -164,12 +164,12 @@ footer {
   text-align: center;
   height: 100%;
   text-decoration: none;
-  color: black;
+  color: #F7F9Fb;
   cursor: pointer;
   font-size: 1.3em;
   padding-left: 10px;
   padding-right: 10px;
-  border: 1px solid black;
+  border: 1px solid #F7F9Fb;
   margin-left: 5px;
   margin-right: 5px;
 }
@@ -538,6 +538,7 @@ footer {
 
 .sidebar {
   display: block;
+  height: calc(100% + 62px);
   width: 25%;
   border-right: 1px solid rgb(255, 255, 255);
 }
@@ -627,7 +628,7 @@ footer {
 
 .bottom-container {
   overflow-y: scroll;
-  height: 100%;
+  height: calc(100% + 58px);
   position: relative;
 }
 
@@ -778,8 +779,8 @@ footer {
 /* LOGIN/SIGNUP PAGE STYLES */
 
 .form-box {
-  background-color: white;
-  margin-top: 20px;
+  background-color: rgb(2, 138, 192);
+  margin-top: 5px;
   width: 400px;
   min-height: fit-content;
   padding-bottom: 20px;
@@ -788,10 +789,8 @@ footer {
 }
 
 .form-box-ls {
-  background-color: white;
   margin-top: 80px;
   width: 400px;
-  border: 1px solid black;
   min-height: fit-content;
   padding-bottom: 20px;
   min-width: fit-content;
@@ -799,21 +798,21 @@ footer {
 
 .form-box-ls h1 {
   text-align: center;
-  color: rgb(104, 103, 103);
+  color: #F7F9Fb;
   margin-top: 25px;
   margin-bottom: 25px;
 }
 
 .form-box h1 {
   text-align: center;
-  color: rgb(104, 103, 103);
+  color: #F7F9Fb;
   margin-top: 25px;
   margin-bottom: 25px;
 }
 
 .main-form h4 {
   margin-left: 35px;
-  color: rgb(104, 103, 103);
+  color: #F7F9Fb;
 }
 
 .main-form h5 {
@@ -828,6 +827,14 @@ footer {
   padding-left: 15px;
   margin-top: 20px;
   margin-bottom: 20px;
+  font-size: 18px;
+  opacity: 0.8;
+  border-radius: 10px;
+  border: none;
+  border-bottom: 2px solid white;
+  background-color: rgb(2, 138, 192);
+  color: #F7F9Fb;
+  outline: none;
 }
 
 .main-form textarea {
@@ -851,7 +858,7 @@ footer {
   height: 55px;
   padding: 15px;
   margin-top: 25px;
-  border: 2px solid rgb(77, 117, 192);
+  border: 2px solid #F7F9Fb;
   background: rgb(77, 117, 192);
   font: inherit;
   cursor: pointer;
@@ -872,11 +879,11 @@ footer {
 }
 
 .login-box p {
-  color: black;
+  color: #F7F9Fb;
 }
 
 .login-box a {
-  color: black;
+  color: #F7F9Fb;
 }
 
 /* ABOUT PAGE STYLES */
@@ -901,6 +908,15 @@ footer {
 
 .add-event-info {
   width: 100%;
+  outline: none;
+}
+
+.add-genre-container {
+  padding-right: 15px;
+}
+
+.add-platform-container {
+  padding-left: 15px;
 }
 
 .date-inner-container {
@@ -912,6 +928,7 @@ footer {
 /* MY EVENTS STYLES */
 .myevents-content-container {
   display: flex;
+  height: calc(100% + 62px);
   flex-direction: column;
   width: 100%;
   max-width: 100%;
@@ -937,7 +954,14 @@ footer {
   align-items: center;
   margin-left: 20px;
   margin-right: 20px;
-  width: 200px;
+  width: 250px;
+}
+
+.genre-platform-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
 }
 
 .details-button {
@@ -1309,8 +1333,8 @@ footer {
       position: relative;
       width: 80%;
       height: 91%;
-      background-color: #F7F9Fb;
-      color: black;
+      background-color: rgb(2, 138, 192);
+      color: #F7F9Fb;
       margin-left: auto;
       margin-right: auto;
   
@@ -1323,7 +1347,7 @@ footer {
       width: 80%;
       height: 91%;
       padding: 0px;
-      background-color: #F7F9Fb;
+      background-color: rgb(2, 138, 192);
       margin-left: auto;
       margin-right: auto;
       overflow: scroll;
@@ -1362,12 +1386,12 @@ footer {
       text-align: center;
       height: 100%;
       text-decoration: none;
-      color: black;
+      color: #F7F9Fb;
       cursor: pointer;
       font-size: small;
       padding-left: 10px;
       padding-right: 10px;
-      border: 1px solid black;
+      border: 1px solid #F7F9Fb;
       margin-left: 5px;
       margin-right: 5px;
   }
@@ -1404,7 +1428,7 @@ footer {
   }
   
   .bottom-container {
-      height: 100%;
+      height: calc(100% + 58px);
       position: relative;
       overflow-y: scroll;
       /* border-top: 1px solid black; */
@@ -1426,51 +1450,50 @@ footer {
   
   
   .form-box {
-      background-color: white;
-      margin-top: 20px;
-      margin-bottom: 20px;
-      width: 80%;
-      min-height: fit-content;
-      padding-bottom: 20px;
-      min-width: fit-content;
+    background-color: rgb(2, 138, 192);;
+    margin-top: 5px;
+    margin-bottom: 20px;
+    width: 80%;
+    min-height: fit-content;
+    padding-bottom: 20px;
+    min-width: fit-content;
 
-  }
-  
-  .form-box h1 {
-      text-align: center;
-      color: rgb(104, 103, 103);
-      margin-top: 10px;
-      margin-bottom: 10px;
+}
+
+.form-box h1 {
+    text-align: center;
+    color: #F7F9Fb;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.form-box-ls {
+    background-color: rgb(2, 138, 192);;
+    margin-top: 80px;
+    width: 80%;
+    min-height: fit-content;
+    padding-bottom: 20px;
+    min-width: fit-content;
   }
 
-  .form-box-ls {
-      background-color: white;
-      margin-top: 80px;
-      width: 80%;
-      border: 1px solid black;
-      min-height: fit-content;
-      padding-bottom: 20px;
-      min-width: fit-content;
-    }
-  
-    .form-box-ls h1 {
-      text-align: center;
-      color: rgb(104, 103, 103);
-      margin-top: 10px;
-      margin-bottom: 10px;
-    }
-  
+  .form-box-ls h1 {
+    text-align: center;
+    color: #F7F9Fb;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+
   .main-form h4 {
       margin-left: 35px;
   }
-  
+
   .main-form h5 {
       font-size: 0.95em;
   }
-  
+
   .text-input {
       display: block;
-      width: 90%;
+      width: 100%;
       height: 30px;
       font-size: 18px;
       padding-left: 15px;
@@ -1483,7 +1506,7 @@ footer {
       height: 35px;
       padding: 5px;
       margin-top: 25px;
-      border: 2px solid rgb(77, 117, 192);
+      border: 2px solid #F7F9Fb;
       background: rgb(77, 117, 192);
       font: inherit;
       cursor: pointer;
@@ -1497,7 +1520,7 @@ footer {
       border: 2px solid blue;
       background: blue;
   }
-  
+    
   .login-box {
       margin-top: 5px;
       width: 90%;
@@ -1521,7 +1544,7 @@ footer {
       display: flex;
       flex-direction: column;
       align-items: center;
-      margin: 5px 20px 5px 20px;
+      margin: 5px 20px 15px 20px;
       width: 200px;
   }
   
@@ -1585,7 +1608,7 @@ footer {
 
 @media screen and (min-height: 600px) {
   .form-box-ls {
-      margin-bottom: 180px;
+      margin-bottom: 0px;
   }
 
   .login-box {
