--- a/src/App.css
+++ b/src/App.css
@@ -98,8 +98,45 @@ footer {
   text-align: center;
 }
 
-::placeholder {
+.white-back {
+  background-color: #F7F9Fb;
+  color: black;
+}
+
+.text-input::placeholder {
   color: #F7F9Fb;
+}
+
+button {
+  display: inline-block;
+  border: none;
+  padding: 1rem 2rem;
+  margin: 0;
+  text-decoration: none;
+  background: #0069ed;
+  color: #ffffff;
+  font-family: sans-serif;
+  font-size: 1rem;
+  cursor: pointer;
+  text-align: center;
+  transition: background 250ms ease-in-out, 
+              transform 150ms ease;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+}
+
+button:hover,
+button:focus {
+  background: #0053ba;
+}
+
+button:focus {
+  outline: 1px solid #fff;
+  outline-offset: -4px;
+}
+
+button:active {
+  transform: scale(0.99);
 }
 
 /* COVER PAGE STYLES */
@@ -126,7 +163,7 @@ footer {
   position: relative;
   width: 70%;
   height: 75%;
-  background-color: rgb(2, 138, 192);;
+  background-color: rgb(2, 138, 192);
   margin-left: auto;
   margin-right: auto;
 }
@@ -185,12 +222,14 @@ footer {
   font-size: 30px;
   cursor: pointer;
   text-decoration: none;
+  background-color: rgb(2, 138, 192);
 }
 
 .cover-exit:before {
   content: "X";
   text-decoration: none;
-  color: black;
+  color: #F7F9Fb;
+  background-color: rgb(2, 138, 192);
 }
 
 /* Splash Screen Styles */
@@ -562,6 +601,10 @@ footer {
   vertical-align: middle;
 }
 
+#event-search-form::placeholder {
+  color: black;
+}
+
 #event-search-form {
   display: flex;
   flex-direction: column;
@@ -856,7 +899,7 @@ footer {
   border: none;
 }
 
-.main-form button {
+.form-submit-button {
   width: 320px;
   height: 55px;
   padding: 15px;
@@ -871,7 +914,7 @@ footer {
   color: white;
 }
 
-.main-form button:hover, .main-form button:active, .main-form button:focus {
+.form-submit-button:hover, .form-submit-button:active, .form-submit-button:focus {
   border: 2px solid blue;
   background: blue;
 }
@@ -1504,7 +1547,7 @@ footer {
       margin-bottom: 5px;
   }
     
-  .main-form button {
+  .form-submit-button {
       width: 80%;
       height: 35px;
       padding: 5px;
@@ -1519,7 +1562,7 @@ footer {
       color: white;
   }
     
-  .main-form button:hover, .main-form button:active, .main-form button:focus { /* NOT CHANGED */
+  .form-submit-button:hover, .form-submit-buttonn:active, .form-submit-button:focus { /* NOT CHANGED */
       border: 2px solid blue;
       background: blue;
   }
