--- a/src/App.css
+++ b/src/App.css
@@ -75,6 +75,7 @@ footer {
 }
 
 /* General Stuff */
+
 .center {
   margin-left: auto;
   margin-right: auto;
@@ -91,6 +92,10 @@ footer {
 
 .margin-right {
   margin-right: 5px;
+}
+
+.margin-top {
+  margin-top: 10px;
 }
 
 .error {
@@ -137,6 +142,16 @@ button:focus {
 
 button:active {
   transform: scale(0.99);
+}
+
+.box-shadow::after {  
+  box-shadow: 0 5px 15px 2px rgba(0, 0, 0, 0.1);
+  opacity: 0; /* hide the hover shadow */
+  transition: opacity 0.3s ease-in-out;
+}
+
+.box-shadow:hover::after  {  
+  opacity: 1; /* show the hover shadow */
 }
 
 /* COVER PAGE STYLES */
@@ -1075,6 +1090,10 @@ button:active {
       border-bottom: none;
   }
 
+  .event-head-text {
+    font-size: 1.65rem;
+  }
+
   .about-container {
       display: none;
   }
@@ -1617,9 +1636,9 @@ button:active {
   .main-form textarea {
       display: block;
       /* width: 320px; */
-      width: 82%;
+      width: 100%;
       height: 70px;
-      font-size: 18px;
+      font-size: 14px;
       /* padding: 15px; */
       resize: none;
   }
