--- a/src/App.css
+++ b/src/App.css
@@ -98,6 +98,14 @@ footer {
   margin-top: 10px;
 }
 
+.trash {
+  color: red;
+}
+
+.info {
+  color: blue;
+}
+
 .error {
   color: rgb(255, 109, 109);
   text-align: center;
@@ -110,6 +118,38 @@ footer {
 
 .text-input::placeholder {
   color: #F7F9Fb;
+}
+
+.button {
+  display: inline-block;
+  border: none;
+  padding: 1rem 2rem;
+  margin: 0;
+  text-decoration: none;
+  background: #0069ed;
+  color: #ffffff;
+  font-family: sans-serif;
+  font-size: 1rem;
+  cursor: pointer;
+  text-align: center;
+  transition: background 250ms ease-in-out, 
+              transform 150ms ease;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+}
+
+.button:hover,
+.button:focus {
+  background: #0053ba;
+}
+
+.button:focus {
+  outline: 1px solid #fff;
+  outline-offset: -4px;
+}
+
+.button:active {
+  transform: scale(0.99);
 }
 
 button {
@@ -152,6 +192,137 @@ button:active {
 
 .box-shadow:hover::after  {  
   opacity: 1; /* show the hover shadow */
+}
+
+/* HOME STYLES */
+
+.home-scroll-container {
+  height: 100vh;
+  overflow-y: scroll;
+}
+
+.home-container { 
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.parallax {
+  height: 150px;
+  background-color: black;
+}
+
+.home-image1 {
+  height: 150px;
+  width: 100%;
+  opacity: 0.65;
+  background-image: url('https://blog.malwarebytes.com/wp-content/uploads/2018/10/shutterstock_612941954-900x506.jpg');
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.home-image2 {
+  height: 150px;
+  width: 100%;
+  opacity: 0.65;
+  background-image: url('https://freshmusicfreaks.com/wp-content/uploads/2019/10/LostLands2019_viaOhDagYoPhotos.jpg');
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.home-news-container {
+  height: 200px;
+  background-color: #3b3b3b;
+  color: #F7F9Fb;
+  padding-top: 40px;
+}
+
+
+
+.news-header {
+  color: rgb(190, 190, 190);
+}
+
+.news-text {
+  text-align: center;
+  margin: 10px;
+  margin-top: 0;
+}
+
+.home-event-button1 {
+  color: #fff !important;
+  font-family: 'open sans';
+  font-size: 1.2rem;
+  text-transform: uppercase;
+  text-decoration: none;
+  background: #60a3bc;
+  padding: 15px;
+  border-radius: 50px;
+  display: inline-block;
+  border: 2px solid white;;
+  transition: all 0.4s ease 0s;
+  cursor: pointer;
+}
+
+.home-event-button1:hover {
+  text-shadow: 0px 0px 6px rgba(255, 255, 255, 1);
+  -webkit-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
+  -moz-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
+  transition: all 0.4s ease 0s;
+}
+
+.home-event-button2 {
+  color: #494949 !important;
+  text-transform: uppercase;
+  font-family: 'open sans';
+  text-decoration: none;
+  background: #ffffff;
+  padding: 12px;
+  border: 4px solid #494949 !important;
+  display: inline-block;
+  transition: all 0.4s ease 0s;
+  cursor: pointer;
+}
+
+
+.home-event-button2:hover {
+  color: #ffffff !important;
+  background: #f6b93b;
+  border-color: #f6b93b !important;
+  transition: all 0.4s ease 0s;
+}
+
+.contact-container {
+  padding-top: 50px;
+  color: white;
+  background-color: rgb(31, 31, 31);
+  padding-bottom: 50px;
+  position: relative;
+  z-index: 1;
+}
+
+.inner-contact-container {
+  width: 70%;
+  max-width: 800px;
+  border: 1px solid white;
+  padding: 15px;
+  z-index: 10;
+}
+
+.contact-text {
+  width: 100%;
+  height: 70px;
+  z-index: 10;
+}
+
+.contact-input {
+  width: 100%;
+  max-width: 300px;
+  z-index: 10;
 }
 
 /* COVER PAGE STYLES */
@@ -411,6 +582,8 @@ button:active {
   font-weight: bold;
   background-image: url('https://floridadep.gov/sites/all/themes/basic/image_thumbs_png_gif_jpg.php?f=Fotolia_66039753_L.jpg&w=1600&h=600');
   background-position: center;
+  position: relative;
+  z-index: 4;
 }
 
 
@@ -458,6 +631,9 @@ button:active {
 
 .spotlight-container {
   min-height: fit-content;
+  padding-bottom: 40px;
+  padding-top: 40px;
+  background-color: rgb(2, 105, 146);
 }
 
 .about-container {
@@ -471,17 +647,20 @@ button:active {
   flex-direction: row;
   justify-content: center;
   position: relative;
-  margin-top: 20px;
-  margin-bottom: 20px;
+  margin-bottom: 40px;
   max-height: 400px;
+  width: 60%
 }
 
 .spotlight-image {
   /* background-image: url("https://billetto.co.uk/blog/wp-content/uploads/2019/06/zhqczjr9fho-e1560853535167.jpg" ); */
-  width: 60%;
+  width: 100%;
   height: 40%;
   max-height: 400px;
   max-width: 710px;
+  -webkit-box-shadow: 6px 5px 11px -1px rgba(0,0,0,0.59);
+  -moz-box-shadow: 6px 5px 11px -1px rgba(0,0,0,0.59);
+  box-shadow: 6px 5px 11px -1px rgba(0,0,0,0.59);
 }
 
 .spotlight-button-container {
@@ -588,6 +767,41 @@ button:active {
 
 /* EVENTS PAGE STYLES */
 
+.info-container {
+  position: absolute;
+  right: 5px;
+  top: 45px;
+  border-radius: 40px;
+  cursor: pointer
+}
+
+
+.info-details {
+  border-radius: 40px;
+  font-size: 40px;
+}
+
+.spotlight-info-container {
+  position: absolute;
+  right: 5px;
+  top: 0;
+  border-radius: 40px;
+  cursor: pointer
+}
+
+.spotlight-info-details {
+  border-radius: 40px;
+  font-size: 40px;
+}
+
+.delete-container {
+  position: absolute;
+  left: 5px;
+  top: 45px;
+  border-radius: 40px;
+  cursor: pointer
+}
+
 .main-container {
   display: flex;
   flex-direction: row;
@@ -651,10 +865,13 @@ button:active {
   text-align: center;
 }
 
+
+
 .event-container {
   width: 70%;
   height: 430px;
   padding-top: 10px;
+  padding-bottom: 40px;
   position: relative;
   margin: 40px auto 40px auto;
   /* border-top: 1px solid black; */
@@ -680,7 +897,7 @@ button:active {
   display: flex;
   flex-direction: row-reverse;
   justify-content: space-between;
-  width: 100%;
+  width: 80%;
   position: absolute;
   padding: 5px;
   padding-right: 10px;
@@ -1052,6 +1269,15 @@ button:active {
       bottom: 10px;
   }
 
+  .info-container {
+    right: 17%;
+  }
+
+  .delete-container {
+    left: 17%;
+  }
+
+
 }
 
 @media screen and (max-width: 900px) {
@@ -1065,7 +1291,10 @@ button:active {
 
   .event-container {
       height: 300px;
+      padding-bottom: 30px;
   }
+
+
 }
 
 @media screen and (min-width: 650px) {
@@ -1104,15 +1333,38 @@ button:active {
   }
 
   .spotlight-header {
-      margin-top: 50px;
-      margin-bottom: 25px;
       text-align: center;
+      -webkit-box-shadow: 0px 0px 11px 3px rgba(0,0,0,0.59);
+      -moz-box-shadow: 0px 0px 11px 3px rgba(0,0,0,0.59);
+      box-shadow: 0px 0px 11px 3px rgba(0,0,0,0.59);
+      position: relative;
+      z-index: 3;
+      padding: 10px;
   }
 
   /* .main-nav {
       border: none;
       
   } */
+  
+
+  .contact-text {
+    height: 120px;
+  }
+  
+  .parallax {
+    height: 250px;
+  }
+
+  .home-image1 {
+    height: 250px;
+  }
+  
+  .home-image2 {
+    height: 250px;
+  }
+
+
 
 }
 
@@ -1320,10 +1572,14 @@ button:active {
   }
   
   .spotlight-header {
-      margin-top: 20px;
-      margin-bottom: 15px;
       text-align: center;
       font-size: 1.7em;
+      -webkit-box-shadow: 0px 0px 11px 3px rgba(0,0,0,0.59);
+      -moz-box-shadow: 0px 0px 11px 3px rgba(0,0,0,0.59);
+      box-shadow: 0px 0px 11px 3px rgba(0,0,0,0.59);
+      position: relative;
+      z-index: 3;
+      padding: 10px;
   }
   
   .spotlight-item-container {
@@ -1331,16 +1587,16 @@ button:active {
       flex-direction: row;
       justify-content: center;
       position: relative;
-      margin-top: 25px;
-      margin-bottom: 20px;
+      margin-bottom: 40px;
+      width: 75%
   }
   
   .spotlight-image { 
-      width: 75%;
+      width: 100%;
       height: 60%;
       -webkit-box-shadow: 6px 5px 11px -1px rgba(0,0,0,0.59);
-  -moz-box-shadow: 6px 5px 11px -1px rgba(0,0,0,0.59);
-  box-shadow: 6px 5px 11px -1px rgba(0,0,0,0.59);
+      -moz-box-shadow: 6px 5px 11px -1px rgba(0,0,0,0.59);
+      box-shadow: 6px 5px 11px -1px rgba(0,0,0,0.59);
   }
   
   .spotlight-info {
@@ -1391,6 +1647,29 @@ button:active {
       height: 50px;
       background-color: #F7F9Fb;
       text-decoration: none;
+  }
+
+  .info-container {
+    position: absolute;
+    right: 5px;
+    top: 15%;
+    border-radius: 30px;
+    cursor: pointer
+  }
+
+  .delete-container {
+    position: absolute;
+    left: 5px;
+    top: 15%;
+    border-radius: 30px;
+    cursor: pointer
+  }
+
+
+  
+  .info-details {
+    border-radius: 30px;
+    font-size: 30px;
   }
   
   .cover-container { 
@@ -1627,7 +1906,7 @@ button:active {
   .event-button-container {
       display: flex;
       justify-content: space-between;
-      width: 100%;
+      width: 85%;
       position: absolute;
       padding: 5px;
       /* right: 10px; */
