Tweaked styling and search form structure.

--- a/src/App.css
+++ b/src/App.css
@@ -209,6 +209,7 @@ button:active {
   display: flex;
   flex-direction: row;
   justify-content: center;
+  margin-top: 20px;
 }
 
 .parallax {
@@ -657,7 +658,8 @@ button:active {
   position: relative;
   margin-bottom: 40px;
   max-height: 400px;
-  width: 60%
+  max-width: 710px;
+  width: 60%;
 }
 
 .spotlight-image {
@@ -781,7 +783,7 @@ button:active {
   top: 65px;
   border-radius: 40px;
   cursor: pointer;
-  
+  text-shadow: 0px 0px 10px #014f7c;
 }
 
 
@@ -1292,10 +1294,6 @@ button:active {
     font-size: 50px;
   }
 
-  .spotlight-info-container {
-
-    right: 10%;
-  }
 
   .spotlight-info-details {
     font-size: 50px;
@@ -1611,7 +1609,7 @@ button:active {
       flex-direction: row;
       justify-content: center;
       position: relative;
-      margin-bottom: 40px;
+      margin-bottom: 20px;
       width: 75%
   }
   
@@ -1674,26 +1672,24 @@ button:active {
   }
 
   .info-container {
-    position: absolute;
     right: 5px;
     top: 20%;
-    border-radius: 30px;
-    cursor: pointer
+    border-radius: 40px;
   }
 
   .delete-container {
     position: absolute;
     left: 5px;
     top: 20%;
-    border-radius: 30px;
+    border-radius: 40px;
     cursor: pointer
   }
 
 
   
   .info-details {
-    border-radius: 30px;
-    font-size: 30px;
+    border-radius: 40px;
+    font-size: 40px;
   }
   
   .cover-container { 
