--- a/src/App.css
+++ b/src/App.css
@@ -74,6 +74,75 @@ footer {
   background-position: bottom;
 }
 
+/* ANIMATIONS */
+.fade-out {
+  animation: fadeOut 0.5s ease;
+}
+
+@keyframes fadeIn {
+  0% {opacity:0;}
+  100% {opacity:1;}
+}
+
+@-moz-keyframes fadeIn {
+  0% {opacity:0;}
+  100% {opacity:1;}
+}
+
+@-webkit-keyframes fadeIn {
+  0% {opacity:0;}
+  100% {opacity:1;}
+}
+
+@-o-keyframes fadeIn {
+  0% {opacity:0;}
+  100% {opacity:1;}
+}
+
+@-ms-keyframes fadeIn {
+  0% {opacity:0;}
+  100% {opacity:1;}
+}
+
+@keyframes fadeOut {
+  0% {opacity:1;}
+  100% {opacity:0;}
+}
+
+@-moz-keyframes fadeOut {
+  0% {opacity:1;}
+  100% {opacity:0;}
+}
+
+@-webkit-keyframes fadeOut {
+  0% {opacity:1;}
+  100% {opacity:0;}
+}
+
+@-o-keyframes fadeOut {
+  0% {opacity:1;}
+  100% {opacity:0;}
+}
+
+@-ms-keyframes fadeOut {
+  0% {opacity:1;}
+  100% {opacity:0;}
+}
+
+.moveUp {
+  animation: moveUp 0.5s ease;
+}
+
+@keyframes moveDown {
+  0% {top: -20%}
+  100% {top: 0%}
+}
+
+@keyframes moveUp {
+  0% {top: 0%}
+  100% {top: -20%}
+}
+
 /* General Stuff */
 
 .info {
@@ -502,30 +571,7 @@ button:active {
   -ms-animation: fadeIn 0.5s ease 1.25s forwards;
 }
 
-@keyframes fadeIn {
-  0% {opacity:0;}
-  100% {opacity:1;}
-}
 
-@-moz-keyframes fadeIn {
-  0% {opacity:0;}
-  100% {opacity:1;}
-}
-
-@-webkit-keyframes fadeIn {
-  0% {opacity:0;}
-  100% {opacity:1;}
-}
-
-@-o-keyframes fadeIn {
-  0% {opacity:0;}
-  100% {opacity:1;}
-}
-
-@-ms-keyframes fadeIn {
-  0% {opacity:0;}
-  100% {opacity:1;}
-}
 
 .splash-image {
   display: flex;
@@ -656,6 +702,13 @@ button:active {
   padding-top: 40px;
   background-color: rgb(2, 105, 146);
 }
+
+.news-container {
+    min-height: fit-content;
+  padding: 40px 20px 40px 20px;
+    background-color: rgb(2, 105, 146);
+}
+
 
 .about-container {
   min-height: fit-content;
@@ -905,6 +958,7 @@ button:active {
     background-color: black;
     opacity: 0.8;
     position: relative;
+    animation: fadeIn 0.5s ease;
   }
 
   .info-description {
@@ -966,7 +1020,7 @@ button:active {
   position: relative;
 }
 
-.info-description {
+/* .info-description {
   padding-top: 5px;
   padding-bottom: 10px;
 }
@@ -974,7 +1028,7 @@ button:active {
 .info-artists {
   position: relative;
   top: 20%;
-}
+} */
 
 .misc-info-container {
   width: 100%;
@@ -995,8 +1049,14 @@ button:active {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  position: relative;
   width: 80%;
+  animation: moveDown 0.5s ease;
 }
+
+
+
+
 
 .icon-container {
   font-size: 35px;
@@ -1855,7 +1915,7 @@ button:active {
   .event-container {
       padding-top: 10px;
       width: 80%;
-      height: 280px;
+      height: 290px;
       position: relative;
       margin: 10px auto 20px auto;
       
@@ -1891,6 +1951,7 @@ button:active {
     top: -100%; */
     background-color: black;
     opacity: 0.8;
+    padding: 6px;
     position: relative;
   }
 
@@ -1901,7 +1962,7 @@ button:active {
 
   .info-artists {
     position: relative;
-    top: 8%;
+    top: 0;
   }
   
   .misc-info-container {
