--- a/src/App.css
+++ b/src/App.css
@@ -52,6 +52,10 @@ body {
 
 }
 
+.mobile-search-input {
+  display: none;
+}
+
 .fab-container {
   display: none;
 }
@@ -77,7 +81,11 @@ footer {
 
 /* ANIMATIONS */
 .fade-out {
-  animation: fadeOut 0.5s ease;
+  animation: fadeOut 0.5s ease forwards;
+}
+
+.fade-in {
+  animation: fadeIn 0.5s ease;
 }
 
 @keyframes fadeIn {
@@ -182,6 +190,10 @@ footer {
 
 .margin-top {
   margin-top: 10px;
+}
+
+.margin-left {
+  margin-left: 20px;
 }
 
 .trash {
@@ -702,6 +714,7 @@ button:active {
 }
 
 .spotlight-container {
+  text-align: center;
   min-height: fit-content;
   padding-bottom: 40px;
   padding-top: 40px;
@@ -728,7 +741,7 @@ button:active {
   position: relative;
   margin-bottom: 40px;
   max-height: 400px;
-  max-width: 710px;
+  max-width: 610px;
   width: 60%;
 }
 
@@ -737,7 +750,7 @@ button:active {
   width: 100%;
   height: 40%;
   max-height: 400px;
-  max-width: 710px;
+  max-width: 610px;
   -webkit-box-shadow: 6px 5px 11px -1px rgba(0,0,0,0.59);
   -moz-box-shadow: 6px 5px 11px -1px rgba(0,0,0,0.59);
   box-shadow: 6px 5px 11px -1px rgba(0,0,0,0.59);
@@ -898,6 +911,32 @@ button:active {
   background-color: rgb(2, 105, 146);
 }
 
+.sidebar-fab-container {
+  position: absolute;
+  z-index: 999;
+  border-radius: 20px;
+  box-shadow: 4px 3px 11px 0px rgba(0,0,0,0.75);
+  left: 300px;
+  top: 200px;
+}
+
+.sidebar-fab {
+  border-radius: 20px;
+  box-shadow: -1px 2px 5px 0 rgba(0,0,0,0.2);
+  color: rgb(9, 149, 192);
+  border: 1px solid black;
+  font-size: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: none;
+  cursor: pointer;
+  z-index: 999;
+  width: 40px;
+  height: 40px;
+  background-color: #F7F9Fb;
+  text-decoration: none;
+}
 
 .calendar {
   display: table;
@@ -964,11 +1003,14 @@ button:active {
     opacity: 0.8;
     position: relative;
     animation: fadeIn 0.5s ease;
+    cursor: pointer;
   }
 
   .info-description {
+    padding: 10px;
     padding-top: 5px;
     padding-bottom: 10px;
+    text-align: left;
   }
 
   .info-artists {
@@ -987,8 +1029,8 @@ button:active {
 
 .event-container {
   width: 70%;
-  max-width: 710px;
-  height: 430px;
+  max-width: 400px;
+  height: 300px;
   min-height: fit-content;
   padding-top: 20px;
   padding-bottom: 60px;
@@ -997,14 +1039,38 @@ button:active {
   /* border-top: 1px solid black; */
 }
 
-.event-image {
+.spot-event-container {
+  width: 70%;
+  max-width: 610px;
+  height: 400px;
+  min-height: fit-content;
+  padding-top: 20px;
+  padding-bottom: 60px;
+  position: relative;
+  margin: 40px auto 70px auto;
+}
+
+.spotlight-event-image {
   width: 100%;
   height: 100%;
-  max-width: 710px;
+  max-width: 610px;
   max-height: 400px;
   -webkit-box-shadow: 6px 5px 11px -1px rgba(0,0,0,0.59);
   -moz-box-shadow: 6px 5px 11px -1px rgba(0,0,0,0.59);
   box-shadow: 6px 5px 11px -1px rgba(0,0,0,0.59);
+  cursor: pointer;
+  
+}
+
+.event-image {
+  width: 100%;
+  height: 100%;
+  max-width: 610px;
+  max-height: 400px;
+  -webkit-box-shadow: 6px 5px 11px -1px rgba(0,0,0,0.59);
+  -moz-box-shadow: 6px 5px 11px -1px rgba(0,0,0,0.59);
+  box-shadow: 6px 5px 11px -1px rgba(0,0,0,0.59);
+  cursor: pointer;
 }
 
 .info-overlay-image {
@@ -1066,6 +1132,8 @@ button:active {
 .icon-container {
   color: #F7F9Fb;
   font-size: 35px;
+  cursor: pointer;
+  z-index: 998;
 }
 
 .bottom-container {
@@ -1761,6 +1829,44 @@ button:active {
       justify-content: space-around;
       list-style-type: none;
   }
+
+  .fade-enter {
+    opacity: 0.01;
+  }
+  
+  .fade-enter-active {
+    opacity: 1;
+    transition: opacity 500ms ease-in;
+  }
+  
+  .fade-leave {
+    opacity: 1;
+  }
+  
+  .fade-leave.fade-leave-active {
+    opacity: 0.01;
+    transition: opacity 300ms ease-in;
+  }
+
+  .click-through {
+    pointer-events: none;
+  }
+
+  .mobile-search-input {
+    display: flex;
+    position: fixed;
+    height: 35px;
+    bottom: 75px;
+    right: 20px;
+    z-index: 999;
+    border-radius: 25px;
+    width: 85%;
+    padding: 5px;
+    padding-left: 10px;
+    outline: none;
+    border: none;
+    /* opacity: 0.9 */
+  }
   
   .fab-container {
       display: flex;
@@ -1961,6 +2067,7 @@ button:active {
     opacity: 0.8;
     padding: 6px;
     position: relative;
+    
   }
 
   .info-description {
