--- a/src/App.css
+++ b/src/App.css
@@ -1683,6 +1683,8 @@ button:active {
       padding: 10px;
   }
 
+
+
   /* .main-nav {
       border: none;
       
@@ -1964,6 +1966,11 @@ button:active {
   .spotlight-info {
       padding: 4px;
       cursor: pointer;
+  }
+
+  .home-image {
+    width: 350px;
+    height: 275px;
   }
   
   .prev {
