--- a/src/App.css
+++ b/src/App.css
@@ -188,6 +188,14 @@ footer {
   color: rgb(92, 92, 92);
 }
 
+.pad-left {
+  padding-left: 10px;
+}
+
+.pad-right {
+  padding-right: 10px;
+}
+
 .xs-text {
   font-size: x-small;
 }
@@ -550,6 +558,12 @@ button:active {
   z-index: 1100;
 }
 
+.cover-event-image:hover {
+  cursor: -moz-zoom-in; 
+  cursor: -webkit-zoom-in; 
+  cursor: zoom-in;
+}
+
 .cover-full-image {
   height: 100%;
 }
@@ -777,6 +791,10 @@ button:active {
   padding-left: 10px;
   padding-right: 10px;
   
+}
+
+.nav-link:hover, .nav-link:active, .nav-link:focus {
+  color: rgb(2, 105, 146);;
 }
 
 .about-header {
@@ -1177,7 +1195,7 @@ button:active {
   justify-content: space-between;
   width: 50%;
   padding: 5px;
-  padding-left: 10px;
+  padding-left: 20px;
   padding-top: 5px;
   text-align: left;
 }
@@ -2116,6 +2134,12 @@ button:active {
       z-index: 1100;
   }
 
+  .cover-event-image:hover {
+    cursor: -moz-zoom-in; 
+    cursor: -webkit-zoom-in; 
+    cursor: zoom-in;
+  }
+
   .cover-full-image {
     width: 100%;
     height: 70%;
@@ -2216,7 +2240,7 @@ button:active {
   
   .event-image {
       width: 50%;
-      height: 200px;
+      height: 240px;
   }
 
   .info-overlay-image {
