--- a/src/App.css
+++ b/src/App.css
@@ -183,6 +183,24 @@ footer {
 
 /* General Stuff */
 
+.spotlight-list-header {
+  font-size: 72px;
+  margin-bottom: 50px;
+}
+
+.spotlight-list-innertext {
+  font-size: 28px;
+  margin-bottom: 40px;
+}
+
+.spotlight-list-innertext2 {
+  font-size: 28px;
+}
+
+.font-family-2 {
+  font-family: 'Josefin Sans', sans-serif;
+}
+
 .artist {
   background-color: rgb(255, 231, 19);
   color: rgb(92, 92, 92);
@@ -399,6 +417,11 @@ button:active {
   background-color: black;
 }
 
+.home-image3 {
+  width: 250px;
+  height: 175px;
+}
+
 .home-image1 {
   height: 150px;
   width: 100%;
@@ -489,6 +512,10 @@ button:active {
   background-color: rgb(14, 13, 13);
   padding-bottom: 50px;
   position: relative;
+  background-image: url('https://freshmusicfreaks.com/wp-content/uploads/2019/10/LostLands2019_viaOhDagYoPhotos.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
   z-index: 1;
 }
 
@@ -496,6 +523,7 @@ button:active {
   width: 70%;
   max-width: 800px;
   border: 1px solid white;
+  background-color: rgb(14, 13, 13);
   padding: 15px;
   z-index: 10;
 }
@@ -803,6 +831,35 @@ button:active {
   text-align: center;
 }
 
+.landing-container {
+  background-image: url('./hans_5.jpg');
+  background-position: 70% 80%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding-bottom: 40px;
+  padding-top: 40px;
+}
+
+.landing-inner {
+  width: 60%;
+  border-top: 2px solid white;
+  border-bottom: 2px solid white;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.landing-image-container {
+  width: 60%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .spotlight-container {
   text-align: center;
   min-height: fit-content;
@@ -810,6 +867,7 @@ button:active {
   padding-top: 40px;
   background-color: rgb(2, 105, 146);
 }
+
 
 .news-container {
   /* display: flex;
@@ -1931,6 +1989,48 @@ button:active {
     transform: none;
   }
   
+  .spotlight-list-header {
+    font-size: 36px;
+    margin-bottom: 30px;
+  }
+  
+  .spotlight-list-innertext {
+    font-size: 18px;
+    margin-bottom: 25px;
+  }
+  
+  .spotlight-list-innertext2 {
+    font-size: 18px;
+  }
+  
+  .font-family-2 {
+    font-family: 'Josefin Sans', sans-serif;
+  }
+
+  .home-image {
+    width: 320px;
+    height: 240px;
+  }
+
+  .home-image3 {
+    margin-left: auto;
+    margin-right: auto;
+  }
+  
+  .landing-inner {
+    width: 75%;
+  }
+
+
+  
+  .landing-image-container {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
   .spotlight-header {
       text-align: center;
       font-size: 1.7em;
@@ -1986,10 +2086,6 @@ button:active {
       cursor: pointer;
   }
 
-  .home-image {
-    width: 350px;
-    height: 275px;
-  }
   
   .prev {
       left: 0%;
